trunk/Archive2/85/7bc2ddc1e8b596/output
main.cpp:28:50: warning: parentheses were disambiguated as a function declaration [-Wvexing-parse]
    queue<T,  decreasing_order >uncoveredSetQueue( decreasing_order(tab) );/*2*/
                                                 ^~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:28:52: note: add a pair of parentheses to declare a variable
    queue<T,  decreasing_order >uncoveredSetQueue( decreasing_order(tab) );/*2*/
                                                   ^
                                                   (                    )
main.cpp:29:22: error: member reference base type 'queue<int, decreasing_order> (decreasing_order)' is not a structure or union
    uncoveredSetQueue.push(a);
    ~~~~~~~~~~~~~~~~~^~~~~
main.cpp:34:5: note: in instantiation of function template specialization 'fun<int>' requested here
    fun(1);
    ^
1 warning and 1 error generated.
